// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) neutral-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;
